# quantize_culture

./: .gitignore  BDD_IMPLEMENTATION_COMPLETE.md  BDD_TEST_SUMMARY.md  CLEANUP_PLAN.md  CLUSTERING_OPTIMIZATION.md  FINAL_3D_UMAP_COMPLETE.md  INFERENCE_CLI.md  README.md  REFACTORING_PLAN.md  TEST_COVERAGE_SUMMARY.md  benchmark_comparison.py  clustering_benchmarks.json  clustering_demo.py  complete_3d_umap_data.csv  complete_class_summary.csv  complete_scoring_demo.py  complete_target_collection_data.csv  coordinate_neighborhood_1_0.982_1.395.csv  coordinate_neighborhood_2_8.351_5.412.csv  coordinate_neighborhood_3_7.885_4.666.csv  create_contextualized_extended.py  create_enhanced_output.py  create_enhanced_output_simple.py  create_output.py  data_01.json  data_01_contextualized.json  debug_db_query.py  debug_extract_hang.py  debug_plotly_input_data.csv  debug_umap_data_with_indices.csv  demo_analysis_results.json  demo_extract.py  docker-compose.yml  examples_extract.py  extended_dl_sentences.json  extended_dl_sentences_contextualized.json  fixed_extract.py  full_scoring_demo.py  generate_plots.py  improve_clustering.py  (+31 more)
app/: Dockerfile  __init__.py  clustering_optimizer.py  embed_and_store.py  extract.py  load_data.py  main.py  qualitative_assessment.py  qualitative_assessment_run.py  requirements.txt  utils.py
app/analysis/: __init__.py
app/core/: __init__.py  (+3 more)
quadrant/: Dockerfile
reports/: clustering_report_collection3_2025-06-19_14-53.md  clustering_report_collection3_2025-06-19_15-08.md  clustering_report_contextualized_collection_2025-06-20_08-54.md  (+2 more)
(+265 files in other folders)
